# slam_ws

./: .gitignore  ESP32_COMPLETE_EXAMPLE.md  ESP32_ENCODER_FIX_GUIDE.md  ESP32_SYSTEM_SUMMARY.md  ESP32_WORKFLOW_EXAMPLE.md  README.md  demo_esp32_workflow.sh  demo_workflow.sh  frames_2025-02-12_21.54.17.gv  my_map.data  my_map.pgm  my_map.yaml  my_new_map.pgm  my_new_map.yaml  quick_demo.sh  test_esp32_complete.sh  test_esp32_encoders.sh
src/my_slam_pkg/: CMakeLists.txt  package.xml  setup.py
src/my_slam_pkg/config/: compatible_nav2.rviz  continue_slam_params.yaml  controllers.yaml  ekf_params.yaml  esp32_complete_system.rviz  esp32_controllers.yaml  esp32_ekf_params.yaml  esp32_imu_slam_params.yaml  esp32_nav2_params.yaml  esp32_navigation_real.rviz  esp32_ros2_control_ekf.yaml  esp32_slam_params.yaml  esp32_slam_real.rviz  hardware_controllers.yaml  nav2.rviz  nav2_params.txt  nav2_params.yaml  nav2_slam.rviz  simple_nav2.rviz  slam.rviz  slam_optimized_controllers.yaml  slam_params.yaml  twist_mux.yaml
src/my_slam_pkg/firmware_reference/: esp32_firmware.ino
src/my_slam_pkg/hardware_interface/: my_slam_pkg_hardware_interface.xml
src/my_slam_pkg/hardware_interface/include/my_slam_pkg/: esp32_hardware_interface.hpp
src/my_slam_pkg/hardware_interface/src/: esp32_hardware_interface.cpp
src/my_slam_pkg/launch/: complete_launch_system.launch.py   complete_nav.launch.py  continue_slam.launch.py  esp32_ekf_slam.launch.py  esp32_navigation_real.launch.py  esp32_real_robot.launch.py  esp32_robot.launch.py  esp32_slam_real.launch.py  esp32_teleop.launch.py  final_system.launch.py  full_system.launch.py  hardware_control.launch.py  integrated_nav_system.launch.py  integrated_system.launch.py  localization.launch.py  map_server.launch.py  minimal_nav.launch.py  nav2.launch.py  nav2_launch.py  nav_goal_listener.launch.py  navigation.launch.py  navigation_rviz.launch.py  navigation_with_controllers.launch.py  navigation_with_twist_mux.launch.py  robot_gazebo.launch.py  save_map.launch.py  slam_complete.launch.py  slam_navigation.launch.py  static_transform.launch.py  teleop.launch.py  twist_mux.launch.py  visualization.launch.py
src/my_slam_pkg/maps/: my_map.pgm  my_map.yaml
src/my_slam_pkg/my_slam_pkg/: __init__.py  nav_goal_client.py  nav_goal_listener.py  nav_goal_sender.py
src/my_slam_pkg/rviz/: nav2_config.rviz
src/my_slam_pkg/scripts/: calibrate_motors.py  ekf_diagnostics.py  ekf_test_script.py  ekf_test_script.py   ensure_nav_active.py  esp32_diagnostics.py  esp32_hardware_controller.py  flash_esp32_firmware.sh  imu_diagnostics.py  imu_enhanced_odometry_node.py  manual_motor_test.py  mock_esp32.py  nav_test.py  nav_visualization.py  navigate_to_coordinates.py  rplidar_diagnostics.py  send_waypoints.py  set_initial_pose.py  setup_navigation.py  setup_rplidar.py  simple_motor_test.py manual  slam_diagnostic.py  slam_diagnostics.py  slam_odometry_calibrator.py  test_encoders.py  test_map_server.py  test_motor_control.py  test_motors.py  test_rplidar.py  tf_monitor.py  velocity_monitor.py
src/my_slam_pkg/src/: slam_node.cpp
src/my_slam_pkg/urdf/: car.urdf.xacro  esp32_complete_robot.urdf  esp32_real_robot.urdf.xacro
src/my_slam_pkg/worlds/models/HospitalRobotCharger/: model.config  model.sdf
src/my_slam_pkg/worlds/models/HospitalRobotCharger/meshes/: HospitalRobotCharger.mtl
src/my_slam_pkg/worlds/sim/: package.xml
src/my_slam_pkg/worlds/sim/launch/: my_world.launch
src/my_slam_pkg/worlds/sim/world/: hos.world
src/ros2_control_test/: CMakeLists.txt  package.xml
src/ros2_control_test/config/: hardware_config.yaml  test_controllers.yaml
src/ros2_control_test/hardware_interface/: ros2_control_test_hardware.xml
src/ros2_control_test/hardware_interface/include/ros2_control_test/: esp32_hardware_interface.hpp
src/ros2_control_test/hardware_interface/src/: esp32_hardware_interface.cpp
src/ros2_control_test/launch/: test_hardware.launch.py  test_teleop.launch.py
src/ros2_control_test/scripts/: hardware_diagnostics.py  joint_state_monitor.py  motor_test.py
src/ros2_control_test/urdf/: test_robot.urdf.xacro
