<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_slam_pkg</name>
  <version>0.0.1</version>
  <description>A package for SLAM implementation with ROS2 control for a four-wheeled robot</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Core Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- SLAM Dependencies -->
  <depend>slam_toolbox</depend>
  
  <!-- Navigation Dependencies -->
  <depend>nav2_bringup</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_common</depend>
  
  <!-- Controller Dependencies -->
  <depend>controller_manager</depend>
  <depend>ros2_controllers</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>twist_mux</depend>
  <depend>gazebo_ros2_control</depend>
  
  <!-- Python Dependencies -->
  <depend>python3-tf-transformations</depend>
  <depend>python3-numpy</depend>
  
  <!-- Gazebo Dependencies -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  
  <!-- Build/Exec Dependencies -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  
  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/worlds/models"/>
  </export>
</package>