<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_slam_pkg</name>
  <version>0.0.1</version>
  <description>A package for SLAM implementation with ROS2 control, EKF sensor fusion, and four-wheeled robot with IMU integration</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Core Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- SLAM Dependencies -->
  <depend>slam_toolbox</depend>
  
  <!-- EKF and Sensor Fusion Dependencies -->
  <depend>robot_localization</depend>  <!-- NEW: EKF filter package -->
  
  <!-- Navigation Dependencies -->
  <depend>nav2_bringup</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_common</depend>
  <depend>nav2_amcl</depend>           <!-- NEW: AMCL for localization -->
  <depend>nav2_controller</depend>     <!-- NEW: Navigation controller -->
  <depend>nav2_planner</depend>        <!-- NEW: Path planner -->
  <depend>nav2_behaviors</depend>      <!-- NEW: Navigation behaviors -->
  <depend>nav2_bt_navigator</depend>   <!-- NEW: Behavior tree navigator -->
  <depend>nav2_lifecycle_manager</depend> <!-- NEW: Lifecycle management -->
  
  <!-- Controller Dependencies -->
  <depend>controller_manager</depend>
  <depend>ros2_controllers</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>twist_mux</depend>
  <depend>gazebo_ros2_control</depend>
  
  <!-- Hardware Interface Dependencies -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  
  <!-- micro-ROS Dependencies -->
  <depend>micro_ros_agent</depend>     <!-- NEW: micro-ROS agent for ESP32 -->
  
  <!-- LiDAR Dependencies -->
  <depend>rplidar_ros</depend>         <!-- NEW: RPLidar driver -->
  
  <!-- Python Dependencies -->
  <depend>python3-tf-transformations</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>      <!-- For IMU processing -->
  <depend>python3-matplotlib</depend> <!-- For diagnostics plotting -->
  
  <!-- Gazebo Dependencies -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  
  <!-- Build/Exec Dependencies -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  
  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/worlds/models"/>
  </export>
</package>